--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -1,7 +1,7 @@
 
 <input type="text" ng-model="basicSearchInput">
 
-<button ng-click="getBasicPrice()">Search</button>
+<button ng-click="getBasicPrice(basicSearchInput)">Search</button>
 
 <div>
     <section>
