--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -1,10 +1,14 @@
+<div class="contentWrapper">
+    <div class="searchDivWrapper">
+        <div class="basicSearchWrapper">
+            <input type="text" ng-model="basicSearchInput">
+        </div>
+        <div class="basicSearchButtonWrapper">
+            <button ng-click="getBasicPrice(basicSearchInput)">Search</button>
+        <div>
+    </div>
 
-<input type="text" ng-model="basicSearchInput">
+    <div class="advancedSearchDivWrapper">
 
-<button ng-click="getBasicPrice(basicSearchInput)">Search</button>
-
-<div>
-    <section>
-
-    </section>
+    </div>
 </div>
