--- a/app/nav/partials/navigation.html
+++ b/app/nav/partials/navigation.html
@@ -1,19 +1,19 @@
-<div ng-controller="NavCtrl">
-
-    
+<div class = "navGrid" ng-controller="NavCtrl">
     <div class="navLeft">
-        <div class="siteLogo">
-            <div class="logoWrapper">
-                <h1>Guitar Pricer</h1>
-            </div>
+        <div class="logoWrapper">
+            <h3>Guitar Pricer</h3>
         </div>
     </div>
 
     <div class="navRight">
-        <div class="authItems">
+        <div class="currentUserWrapper">
             <div class="currentUserDisplay"></div>
-            <button ng-if="!isAuthenticated()" ng-click="routeToRegister()">Log In/Sign Up</button>
-            <button ng-if="isAuthenticated()" ng-click="logout()">Log Out</button>
         </div>
+        <div class="logInButtonWrapper">
+            <button ng-if="!isAuthenticated()" ng-click="routeToRegister()">Log In/Sign Up</button>
+        </div>
+        <div class="logOutButtonWrapper">
+            <button ng-if="isAuthenticated()" ng-click="logout()">Log Out</button>
+        <div>
     </div>
 </div>
