creating user intake form and routing partials for user nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,9 +48,9 @@
 
 .logOutButtonWrapper {
     grid-area: logOutButton;
-}
+} 
 
-.contentWrapper {
+ .basicSearchContentWrapper {
     display: grid;
     background-color: lightgrey;
     grid-area: body;
