--- a/app/guitars/partials/userHomePage.html
+++ b/app/guitars/partials/userHomePage.html
@@ -1,3 +1,5 @@
+<div ng-include="'app/userGear/partials/userNav.html'"></div>
+
 <h1>Hello user</h1>
 
 <input type="text" ng-model="basicSearchInput">
