working on creating and storing user guitars

--- a/app/userGear/partials/guitarIntakeForm.html
+++ b/app/userGear/partials/guitarIntakeForm.html
@@ -2,7 +2,7 @@
 
     <div class="guitarIntakeTitleWrapper">
         <div class="guitarIntakeTitle">
-            <h2>Enter In Information About Your Guitar Below</h2>
+            <h2>Enter In Information About Your Guitar Below To Track Its value</h2>
         </div>
     </div>
 
@@ -68,7 +68,7 @@
                     </div>
                 </div>
             </div>
-            <button >Submit</button>
+            <button ng-click="storeGuitarInfo">Submit</button>
         </div>
     </div>
 </div>
