--- a/app/userGear/partials/userNav.html
+++ b/app/userGear/partials/userNav.html
@@ -8,7 +8,7 @@
             <button>Show Your Guitars</button>
         </div>
         <div class="enterNewGuitarButtonWrapper">
-            <button>Enter New Guitar</button>
+            <button ng-click="toGuitarIntakeForm()">Enter New Guitar</button>
         </div>
 
     </div>
