working add guitars feature, working on displaying  user guitars

--- a/app/userGear/partials/guitarIntakeForm.html
+++ b/app/userGear/partials/guitarIntakeForm.html
@@ -1,3 +1,6 @@
+<div ng-include="'app/userGear/partials/userNav.html'"></div>
+
+
 <div class="guitarIntakeWrapper">
 
     <div class="guitarIntakeTitleWrapper">
@@ -68,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <button ng-click="storeGuitarInfo">Submit</button>
+            <button ng-click="storeGuitarInfo(guitarBrandInput, guitarModelInput, electricAcoustic, vintageCheck, selectedCondition, finishInput, yearInput, guitarBass)">Submit</button>
         </div>
     </div>
 </div>
