--- a/app/userGear/partials/userNav.html
+++ b/app/userGear/partials/userNav.html
@@ -5,7 +5,7 @@
             <button ng-click="toSearches()">Search For Prices</button>
         </div>
         <div class="showYourGuitarsButtonWrapper">  
-            <button>Show Your Guitars</button>
+            <button ng-click="toDisplayUserGuitars()">Show Your Guitars</button>
         </div>
         <div class="enterNewGuitarButtonWrapper">
             <button ng-click="toGuitarIntakeForm()">Enter New Guitar</button>
