user guitars sorting into arrays, working on displaying to DOM

--- a/app/userGear/partials/displayUserGuitars.html
+++ b/app/userGear/partials/displayUserGuitars.html
@@ -3,8 +3,11 @@
 <h2>Your Guitars</h2>
 
 <div class="guitarDisplayWrapper">
-    <div class="guitarDisplayInnerWrapper">
+    <div ng-repeat="row in guitarRows" class="guitarDisplayInnerWrapper">
+        WOOT
+        <div ng-repeat="guitar in row" class="rowOfGuitars">
+            YEAHHH
+        </div>
         
-
     </div>
 </div>
