--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -16,5 +16,15 @@
         <div>
     </div>
 
+    <div class="basicSearchResultsDisplay">
+        <div ng-repeat="prices in resultsArray">
+            <div>
+                The average price for a {{userSearchTitle}} is ${{prices.avgPrice}}
+                with a low price of ${{prices.lowPrice}} and a high price of ${{prices.highPrice}}
+            </div>
+        </div>
+    </div>
+
+
     
 </div>
