--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -20,7 +20,7 @@
         <div ng-repeat="prices in resultsArray">
             <div>
                 The average price for a {{userSearchTitle}} is ${{prices.avgPrice}}
-                with a low price of ${{prices.lowPrice}} and a high price of ${{prices.highPrice}}
+                with a price range of ${{prices.lowPrice}} to ${{prices.highPrice}}
             </div>
         </div>
     </div>
