--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -1,6 +1,6 @@
 <div ng-include="'app/userGear/partials/userNav.html'"></div>
 
-<div class="basicSearchContentWrapper">
+<div class="~~killClass~~basicSearchContentWrapper">
 
     <div class="advancedSearchLinkWrapper">
         <button ng-click="toAdvancedSearch()">Advanced Search</button>
@@ -19,10 +19,11 @@
     <div class="basicSearchResultsDisplay">
         <div ng-repeat="prices in resultsArray">
             <div>
-                <h2>Current values for a {{userSearchTitle}}</h2>
+                <h4>Current values for a {{userSearchTitle}}:</h2>
                 <ul>
-                    <li>Average Price: {{prices.avgPrice}}</li>
-                    <li>Price Range: ${{prices.lowPrice}} to ${{prices.highPrice}}</li>
+                    <li ng-if="isItFalse(prices.lowPrice)">There was only one recent sale for a {{userSearchTitle}}</li>
+                    <li ng-if="isItTrue(prices.avgPrice)">Average Price: {{prices.avgPrice}}</li>
+                    <li ng-if="isItTrue(prices.lowPrice)">Price Range: ${{prices.lowPrice}} to ${{prices.highPrice}}</li>
                 </ul>
             </div>
         </div>
