--- a/app/userGear/partials/displayUserGuitars.html
+++ b/app/userGear/partials/displayUserGuitars.html
@@ -9,14 +9,18 @@
                 <h2>{{guitar.year}} {{guitar.guitarBrand}} {{guitar.guitarModel}}</h2>
             </div>
             <ul>
-                <li ng-if="isItTrue(guitar.mainAvgPrice)">Current average value for a {{guitar.guitarBrand}} {{guitar.guitarModel}}:  {{guitar.mainAvgPrice}}</li>
+                <li ng-if="isItTrue(guitar.mainAvgPrice) && isItTrue(guitar.mainLowPrice)">Current average value for a {{guitar.guitarBrand}} {{guitar.guitarModel}}:  {{guitar.mainAvgPrice}}</li>
                 <li ng-if="isItFalse(guitar.mainAvgPrice)">No recent sales for {{guitar.guitarBrand}} {{guitar.guitarModel}}s</li>
-                <li ng-if="isItFalse(guitar.mainLowPrice && isItTrue(guitar.mainAvgPrice))">There was only one recent sale for a {{guitar.guitarBrand}}{{guitar.guitarModel}}</li>
-                <li ng-if="isItTrue(guitar.yearAvgPrice)">{{guitar.guitarBrand}} {{guitar.guitarModel}}s from {{guitar.year}} have an average value of: {{guitar.yearAvgPrice}}</li>
-                <li>Guitars of your model in the same condition have an average value of: {{guitar.conditionAvgPrice}}</li>
-                <li ng-if="isItTrue(guitar.finishAvgPrice)">{{guitar.guitarBrand}} {{guitar.guitarModel}}s in {{guitar.finish}} have an avergae value of: {{guitar.finishAvgPrice}}</li>
+                <li ng-if="isItFalse(guitar.mainLowPrice) && isItTrue(guitar.mainAvgPrice)">There was only one recent sale for a {{guitar.guitarBrand}}{{guitar.guitarModel}}, it sold for {{guitar.mainAvgPrice}}</li>
+                <li ng-if="isItTrue(guitar.yearAvgPrice) && isItTrue(guitar.yearLowPrice)">{{guitar.guitarBrand}} {{guitar.guitarModel}}s from {{guitar.year}} have an average value of: {{guitar.yearAvgPrice}}</li>
+                <li ng-if="isItFalse(guitar.yearAvgPrice)">No recent sales for {{guitar.guitarBrand}} {{guitar.guitarModel}}s from {{guitar.year}}</li>
+                <li ng-if="isItFalse(guitar.yearLowPrice && isItTrue(guitar.yearAvgPrice))">There was only one recent sale for a {{guitar.year}} {{guitar.guitarBrand}} {{guitar.guitarModel}}, it sold for {{guitar.yearAvgPrice}}</li>
+                <li ng-if="isItTrue(guitar.conditionAvgPrice) && isItTrue(guitar.conditionLowPrice)">{{guitar.guitarBrand}} {{guitar.guitarModel}}s in {{guitar.condition}} condition have an average value of: {{guitar.conditionAvgPrice}}</li>
+                <li ng-if="isItFalse(guitar.conditionAvgPrice)"> There are no recent sales for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.condition}} condition</li>
+                <li ng-if="isItFalse(guitar.conditionLowPrice) && isItTrue(guitar.finishAvgPrice)">There was only one recent sale for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.condition}} condition, it sold for {{guitar.conditionAvgPrice}}</li>
+                <li ng-if="isItTrue(guitar.finishAvgPrice) && isItTrue(guitar.finishLowPrice)">{{guitar.guitarBrand}} {{guitar.guitarModel}}s in {{guitar.finish}} have an avergae value of: {{guitar.finishAvgPrice}}</li>
                 <li ng-if="isItFalse(guitar.finishAvgPrice)"> There are no recent sales for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.finish}}</li>
-                <li ng-if="isItFalse(guitar.finishLowPrice) && isItTrue(guitar.finishAvgPrice)">There was only one recent sale for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.finish}}</li>
+                <li ng-if="isItFalse(guitar.finishLowPrice) && isItTrue(guitar.finishAvgPrice)">There was only one recent sale for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.finish}}, it sold for {{guitar.finishAvgPrice}}</li>
             </ul>
             <div>
                 
