added validation for guitar intake and created responive display for empty categories in user guitar display

--- a/app/userGear/partials/displayUserGuitars.html
+++ b/app/userGear/partials/displayUserGuitars.html
@@ -6,24 +6,25 @@
     <div ng-repeat="row in guitarRows" class="guitarDisplayInnerWrapper">
         <div ng-repeat="guitar in row" class="rowOfGuitars">
             <div>
-                <h2>{{guitar.year}} {{guitar.guitarBrand}} {{guitar.guitarModel}}</h2>
+                <h2 ng-if="guitar.year !== 'n/a'">{{guitar.year}} {{guitar.guitarBrand}} {{guitar.guitarModel}}</h2>
+                <h2 ng-if="guitar.year === 'n/a'">{{guitar.guitarBrand}} {{guitar.guitarModel}}</h2>
             </div>
             <ul>
                 <li ng-if="isItTrue(guitar.mainAvgPrice) && isItTrue(guitar.mainLowPrice)">Current average value for a {{guitar.guitarBrand}} {{guitar.guitarModel}}:  {{guitar.mainAvgPrice}}</li>
                 <li ng-if="isItFalse(guitar.mainAvgPrice)">No recent sales for {{guitar.guitarBrand}} {{guitar.guitarModel}}s</li>
                 <li ng-if="isItFalse(guitar.mainLowPrice) && isItTrue(guitar.mainAvgPrice)">There was only one recent sale for a {{guitar.guitarBrand}}{{guitar.guitarModel}}, it sold for {{guitar.mainAvgPrice}}</li>
-                <li ng-if="isItTrue(guitar.yearAvgPrice) && isItTrue(guitar.yearLowPrice)">{{guitar.guitarBrand}} {{guitar.guitarModel}}s from {{guitar.year}} have an average value of: {{guitar.yearAvgPrice}}</li>
-                <li ng-if="isItFalse(guitar.yearAvgPrice)">No recent sales for {{guitar.guitarBrand}} {{guitar.guitarModel}}s from {{guitar.year}}</li>
-                <li ng-if="isItFalse(guitar.yearLowPrice && isItTrue(guitar.yearAvgPrice))">There was only one recent sale for a {{guitar.year}} {{guitar.guitarBrand}} {{guitar.guitarModel}}, it sold for {{guitar.yearAvgPrice}}</li>
+                <li ng-if="isItTrue(guitar.yearAvgPrice) && isItTrue(guitar.yearLowPrice) && guitar.year !== 'n/a'">{{guitar.guitarBrand}} {{guitar.guitarModel}}s from {{guitar.year}} have an average value of: {{guitar.yearAvgPrice}}</li>
+                <li ng-if="isItFalse(guitar.yearAvgPrice && guitar.year !== 'n/a')">No recent sales for {{guitar.guitarBrand}} {{guitar.guitarModel}}s from {{guitar.year}}</li>
+                <li ng-if="isItFalse(guitar.yearLowPrice && isItTrue(guitar.yearAvgPrice) && guitar.year !== 'n/a')">There was only one recent sale for a {{guitar.year}} {{guitar.guitarBrand}} {{guitar.guitarModel}}, it sold for {{guitar.yearAvgPrice}}</li>
                 <li ng-if="isItTrue(guitar.conditionAvgPrice) && isItTrue(guitar.conditionLowPrice)">{{guitar.guitarBrand}} {{guitar.guitarModel}}s in {{guitar.condition}} condition have an average value of: {{guitar.conditionAvgPrice}}</li>
                 <li ng-if="isItFalse(guitar.conditionAvgPrice)"> There are no recent sales for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.condition}} condition</li>
                 <li ng-if="isItFalse(guitar.conditionLowPrice) && isItTrue(guitar.finishAvgPrice)">There was only one recent sale for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.condition}} condition, it sold for {{guitar.conditionAvgPrice}}</li>
-                <li ng-if="isItTrue(guitar.finishAvgPrice) && isItTrue(guitar.finishLowPrice)">{{guitar.guitarBrand}} {{guitar.guitarModel}}s in {{guitar.finish}} have an avergae value of: {{guitar.finishAvgPrice}}</li>
-                <li ng-if="isItFalse(guitar.finishAvgPrice)"> There are no recent sales for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.finish}}</li>
-                <li ng-if="isItFalse(guitar.finishLowPrice) && isItTrue(guitar.finishAvgPrice)">There was only one recent sale for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.finish}}, it sold for {{guitar.finishAvgPrice}}</li>
-                <li ng-if="isItTrue(guitar.countryAvgPrice) && isItTrue(guitar.countryLowPrice)">Made in {{guitar.country}} {{guitar.guitarBrand}} {{guitar.guitarModel}}s have an avergae value of: {{guitar.countryAvgPrice}}</li>
-                <li ng-if="isItFalse(guitar.countryAvgPrice)"> There are no recent sales for a made in {{guitar.country}} {{guitar.guitarBrand}} {{guitar.guitarModel}}</li>
-                <li ng-if="isItFalse(guitar.countryLowPrice) && isItTrue(guitar.countryAvgPrice)">There was only one recent sale for a made in {{guitar.country}} {{guitar.guitarBrand}} {{guitar.guitarModel}}, it sold for {{guitar.countryAvgPrice}}</li>
+                <li ng-if="isItTrue(guitar.finishAvgPrice) && isItTrue(guitar.finishLowPrice) && guitar.finish !== 'n/a'">{{guitar.guitarBrand}} {{guitar.guitarModel}}s in {{guitar.finish}} have an avergae value of: {{guitar.finishAvgPrice}}</li>
+                <li ng-if="isItFalse(guitar.finishAvgPrice) && guitar.finish !== 'n/a'"> There are no recent sales for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.finish}}</li>
+                <li ng-if="isItFalse(guitar.finishLowPrice) && isItTrue(guitar.finishAvgPrice) && guitar.finish !== 'n/a'">There was only one recent sale for a {{guitar.guitarBrand}} {{guitar.guitarModel}} in {{guitar.finish}}, it sold for {{guitar.finishAvgPrice}}</li>
+                <li ng-if="isItTrue(guitar.countryAvgPrice) && isItTrue(guitar.countryLowPrice) && guitar.country !== 'n/a'">Made in {{guitar.country}} {{guitar.guitarBrand}} {{guitar.guitarModel}}s have an avergae value of: {{guitar.countryAvgPrice}}</li>
+                <li ng-if="isItFalse(guitar.countryAvgPrice) && guitar.country !== 'n/a'"> There are no recent sales for a made in {{guitar.country}} {{guitar.guitarBrand}} {{guitar.guitarModel}}</li>
+                <li ng-if="isItFalse(guitar.countryLowPrice) && isItTrue(guitar.countryAvgPrice) && guitar.country !== 'n/a'">There was only one recent sale for a made in {{guitar.country}} {{guitar.guitarBrand}} {{guitar.guitarModel}}, it sold for {{guitar.countryAvgPrice}}</li>
             </ul>
 
             <div>
