--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -16,6 +16,10 @@
         <div>
     </div>
 
+    <div>
+        <img ng-show="loading" src="../images/ajax-loader.gif">
+    </div>
+
     <div class="basicSearchResultsDisplay">
         <div ng-repeat="prices in resultsArray">
             <div>
